# FineTuning-Lineage

./: .gitignore  CLAUDE.md  HTTP_LOGGING_SUMMARY.md  Makefile  README.md  TEST_SCAFFOLD_SUMMARY.md  architettura_grafo_generalista.md  docker-compose.yml  pyproject.toml  workflow.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.streamlit/: config.toml
docs/: LINEAGE_INTEGRATIONS.md  LINEAGE_SYSTEM_ARCHITECTURE.md  git-ops-status.md  neo4j_schema.md  test_ui.txt  workflow.md
docs/TODO/: NEW-LOG_AND_TEST_PLAN.md  TEST_EXTENSION_PLAN.md
docs/modules/: README.md  config_file.md  data_classes.md  diff.md  history.md  lineage.md  neo4j_client.md  observability.md  server.md  storage.md  streamlit_ui.md
graph_lineage/config_file/: validator.py  writer.py
graph_lineage/core/: node_serializers.py  state_provider.py
tests/: conftest.py  integration_branch_experiment.py  integration_checkpoint_callbacks.py  integration_error_cases.py  integration_merge_experiment.py  integration_new_experiment.py  integration_resume_experiment.py  integration_retry_experiment.py  mock_http_connector.py  mock_neo4j.py  test_builders.py  test_checkpoint_communication.py  test_client_sdk.py  test_collector.py  test_communication_robustness.py  test_config_schema.py  test_config_validator.py  test_config_writer.py  test_experiment_model.py  test_history_repository.py  test_http_connector.py  test_http_logging_demo.py  test_integration_e2e.py  test_messages.py  test_rule_engine.py  test_server_api.py  test_snapshot.py  test_storage.py  test_tracker.py
(+286 files in other folders)
